@@ -1,1 +1,0 @@
-/* Defined as alias for the syscall.  */
